# django-crm

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
dcrm/: settings.py
website/: forms.py  models.py  urls.py  views.py
website/migrations/: 0001_initial.py  0002_alter_record_created_at.py
website/templates/: add_record.html  base.html  home.html  navbar.html  record.html  register.html
