[tool.poetry]
name = "django-crm"
version = "0.1.0"
description = ""
authors = ["Francisco Pantoja <franciscopantojag98@gmail.com>"]
readme = "README.md"
packages = [{include = "django_crm"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.2"
mysql = "^0.0.3"
mysql-connector = "^2.2.9"
mysql-connector-python = "^8.0.33"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
